Added Github guide info

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -9,12 +9,14 @@
 	<meta name="msapplication-TileColor" content="#494f5c">
 <meta itemprop="name" content="Download">
 <meta itemprop="description" content="Download the Explainer Notebook from here along with the necessary files to run with. Download the data related to the Wikia from here
-Download the data related to the Scripts from here">
+Download the data related to the Scripts from here
+You can also download everything from our Github repository. ">
 
-<meta itemprop="wordCount" content="32">
+<meta itemprop="wordCount" content="41">
 <meta itemprop="keywords" content="" /><meta property="og:title" content="Download" />
 <meta property="og:description" content="Download the Explainer Notebook from here along with the necessary files to run with. Download the data related to the Wikia from here
-Download the data related to the Scripts from here" />
+Download the data related to the Scripts from here
+You can also download everything from our Github repository. " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://chrypapado.github.io/Star_Wars/downloads/" /><meta property="article:section" content="" />
 
@@ -23,7 +25,8 @@ Download the data related to the Scripts from here" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Download"/>
 <meta name="twitter:description" content="Download the Explainer Notebook from here along with the necessary files to run with. Download the data related to the Wikia from here
-Download the data related to the Scripts from here"/>
+Download the data related to the Scripts from here
+You can also download everything from our Github repository. "/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="https://chrypapado.github.io/Star_Wars/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://chrypapado.github.io/Star_Wars/favicon-32x32.png">
@@ -77,6 +80,7 @@ Download the data related to the Scripts from here"/>
 			<h3 id="download-the-explainer-notebook-from-hereexplainerzip-along-with-the-necessary-files-to-run-with">Download the Explainer Notebook from <a href="explainer.zip">here</a> along with the necessary files to run with.<a href="#download-the-explainer-notebook-from-hereexplainerzip-along-with-the-necessary-files-to-run-with" class="anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg></a></h3>
 <p>Download the data related to the Wikia from <a href="wikia.zip">here</a></p>
 <p>Download the data related to the Scripts from <a href="scripts.zip">here</a></p>
+<h3 id="you-can-also-download-everything-from-our-github-repositoryhttpsgithubcomchrypapadoan_analysis_of_the_star_wars_universe">You can also download everything from our <a href="https://github.com/Chrypapado/An_analysis_of_the_Star_Wars_universe">Github repository</a>.<a href="#you-can-also-download-everything-from-our-github-repositoryhttpsgithubcomchrypapadoan_analysis_of_the_star_wars_universe" class="anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg></a></h3>
 
 		</div>
 	</main>
